Revision history for CPAN-Testers-Metabase

{{$NEXT}}

1.999001  2010-04-23 15:40:49 EST5EDT

    - ensure S3 prefix has a trailing slash

    - enable S3 retry with exponential backoff

1.999 Wed Mar  3 11:31:48 2010

    - initial release to CPAN