@@ -1,11 +1,0 @@
-default = cpantesters
-[cpantesters]
-access_key_id = XXXXXXXXXXXXXXXXXXXX
-secret_access_key = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-certificate_file = my-cert.pem
-private_key_file = my-key.pem
-ec2_keypair_name = my-ec2-keypair
-ec2_keypair_file = ec2-private-key.pem
-aws_account_id = 0123-4567-8901
-canonical_user_id = 64-character-string
-
